--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>information</title>
-<link rel="stylesheet" href="info.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div style="border:3px solid skyblue; wight:100px;height: 980;">
